syntax = "proto3";

option go_package = "grpc/proto";

package proto;

message ClientReference {
    string client_address = 1;
    int32 client_port = 2;
    string client_name = 3;
}

message Question {
    // time will be represented by Lamport clocks incremented when a message is received or sended
    ClientReference client_reference = 1;
    int32 time = 2;
}

message Answer{
    bool reply = 1;
    int32 time = 2;
}

service MutualExlusionService {
    rpc AskPermission (Question) returns (Answer);
}